# spring8_distribution

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: back_projection.h  calculate_cor.h  cuda_util.h  file_io.h  h5_util.h  pre_process.h  stitch.h
main/: 0_check_roi.cu  1_stitch.cu  2_cor.cpp  3_cbp.cu  _stitch2cbp.cu
src/: back_projection.cu  calculate_cor.cpp  file_io.cpp  h5_util.cpp  pre_process.cu  stitch.cpp
